--- a/index.html
+++ b/index.html
@@ -7,6 +7,233 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Привет, это наш сайт. Всё получилось!</h1>
+    <section>  
+        <h1>Привет, это наш сайт. Всё получилось!</h1>
+        <p>Всего лишь тренируюсь)</p>
+    </section>
+    <section>
+        <h2>Таблицы</h2>
+        <table border="2">
+            <tr>
+                <td colspan="2">ячейка 1</td>
+                <td>ячейка 3</td>
+            </tr>
+            <tr>
+                <td rowspan="2">ячейка 4</td>
+                <td>ячейка 5</td>
+                <td>ячейка 6</td>
+            </tr>
+            <tr>
+                <td>ячейка 8</td>
+                <td>ячейка 9</td>
+            </tr>
+        </table>
+        <br>
+        <table border="2">
+            <tr>
+                <td colspan="3">ячейка 1</td>
+            </tr>
+            <tr>
+                <td>ячейка 4</td>
+                <td rowspan="2">ячейка 5</td>
+                <td>ячейка 6</td>
+            </tr>
+            <tr>
+                <td>ячейка 8</td>
+                <td>ячейка 9</td>
+            </tr>
+        </table>
+        <br>
+        <table border="2">
+            <tr>
+                <td rowspan="3">ячейка 1</td>
+                <td>ячейка 2</td>
+                <td rowspan="3">ячейка 3</td>
+            </tr>
+            <tr>
+                <td>ячейка 5</td>
+                
+            </tr>
+            <tr>
+                <td>ячейка 8</td>
+            </tr>
+        </table>
+        <br>
+        <table border="2">
+            <tr>
+                <td>text</td>
+                <td colspan="5" bgcolor="green">text</td>
+                <td>text</td>
+                <td>text</td>
+            </tr>
+            <tr>
+                <td>text</td>
+                <td>text</td>
+                <td>text</td>
+                <td>text</td>
+                <td>text</td>
+                <td>text</td>
+                <td>text</td>
+                <td>text</td>
+                
+            </tr>
+            <tr>
+                <td colspan="2" bgcolor="green">text</td>
+                <td>text</td>
+                <td>text</td>
+                <td>text</td>
+                <td>text</td>
+                <td>text</td>
+                <td>text</td>
+            </tr>
+        </table>
+        <br>
+        <table border="2">
+            <tr>
+                <td rowspan="2" align="center"><b>номер</b></td>
+                <td colspan="2" align="center"><b>теги</b></td>
+            </tr>
+            <tr>
+                <td align="center"><b>тег</b></td>
+                <td align="center"><b>значение</b></td>
+            </tr>
+            <tr>
+                <td>1</td>
+                <td>p</td>
+                <td rowspan="4">для текста</td>
+            </tr>
+            <tr>
+                <td>2</td>
+                <td>a</td>
+            </tr>
+            <tr>
+                <td>3</td>
+                <td>b</td>
+            </tr>
+            <tr>
+                <td>4</td>
+                <td>i</td>
+            </tr>
+            <tr>
+                <td>5</td>
+                <td>table</td>
+                <td>таблица</td>
+            </tr>
+            <tr>
+                <td>6</td>
+                <td>tr</td>
+                <td>ряд таблицы</td>
+            </tr>
+            <tr>
+                <td>7</td>
+                <td>td</td>
+                <td rowspan="2">ячейка таблицы</td>
+            </tr>
+            <tr>
+                <td>8</td>
+                <td>th</td>
+            </tr>
+        </table>
+        <br>
+        <table border="1">
+            <tr>
+                <td rowspan="9">A</td>
+                <td rowspan="8">B</td>
+                <td rowspan="7">C</td>
+                <td rowspan="6">D</td>
+                <td rowspan="5">E</td>
+                <td rowspan="4">F</td>
+                <td>AH</td>
+                <td rowspan="4">H</td>
+                <td rowspan="5">I<I/td>
+                <td rowspan="6">J</td>
+                <td rowspan="7">K</td>
+                <td rowspan="8">L</td>
+                <td rowspan="10">M</td>
+            </tr>
+            <tr>
+                <td>G</td>
+            </tr>
+            <tr>
+                <td>GH</td>
+            </tr>
+            <tr>
+                <td>N</td>
+            </tr>
+            <tr>
+                <td colspan="3">O</td>
+            </tr>
+            <tr>
+                <td colspan="5">P</td>
+            </tr>
+            <tr>
+                <td colspan="7">Q</td>
+            </tr>
+            <tr>
+                <td colspan="2">R</td>
+                <td>S</td>
+                <td>T</td>
+                <td>U</td>
+                <td>V</td>
+                <td>W</td>
+                <td colspan="2">X</td>
+            </tr>
+            <tr>
+                <td colspan="11">Y</td>
+            </tr>
+            <tr>
+                <td colspan="2">Z</td>
+                <td>1</td>
+                <td>2</td>
+                <td>3</td>
+                <td>4</td>
+                <td>5</td>
+                <td>6</td>
+                <td>7</td>
+                <td>8</td>
+                <td>9</td>
+                <td>10</td>
+            </tr>
+        </table>
+    </section>
+    <section>
+        <h2>Полезные ссылки</h2>
+        <ol>
+            <li>
+                <a href="https://ru.wikipedia.org/" target="_blank"></a>
+            </li>
+            <li>
+                <a href="https://www.kinopoisk.ru/" target="_blank"></a>
+            </li>
+            <li>
+                <a href="https://www.youtube.com/" target="_blank"></a>
+            </li>
+            <li>
+                <a href="https://html5book.ru/" target="_blank"></a>
+            </li>
+        </ol>
+    </section>
+    <section>
+        <h2>Мои любимые картинки</h2>
+        <table border="1" >
+            <tr>
+                <td width="20">
+                    <img src="img/1.jpg" alt="">
+                </td>
+                <td>
+                    <img src="img/2.png" alt="">
+                </td>
+                <td>
+                    <img src="img/3.png" alt="">
+                </td>
+                <td>
+                    <img src="img/4.jpg" alt="">
+                </td>
+                <td>
+                    <img src="img/5.jfif" alt="">
+                </td>
+            </tr>
+        </table>
+    </section>
 </body>
 </html>
